# django_training

./: README.md  pyproject.toml  start.sh
django_project/django_project/: settings.py  urls.py  views.py
django_project/posts/: models.py  urls.py  views.py
django_project/posts/migrations/: 0001_initial.py  0002_post_banner.py
django_project/posts/templates/posts/: posts_list.html  posts_page.html
django_project/static/css/: style.css
django_project/templates/: about.html  home.html  layout.html
django_project/users/: urls.py  views.py
django_project/users/templates/users/: register.html
