[tool.poetry]
name = "fcc-django"
version = "0.1.0"
description = ""
authors = ["Kevin Campos <89799176+kvncampos@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
install = "^1.3.5"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
